After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706235 - repo: Fix object storage size API to be 64 bit
repo: Fix object storage size API to be 64 bit
Status: RESOLVED FIXED
Product: ostree
Classification: Infrastructure
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: OSTree maintainer(s)
OSTree maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-08-18 12:10 UTC by Colin Walters
Modified: 2013-08-25 19:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
repo: Fix object storage size API to be 64 bit (1.97 KB, patch)
2013-08-18 12:10 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2013-08-18 12:10:17 UTC
This fixes a pointer size warning on 32-bit builds.
Comment 1 Colin Walters 2013-08-18 12:10:18 UTC
Created attachment 252107 [details] [review]
repo: Fix object storage size API to be 64 bit
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-08-25 19:16:51 UTC
Review of attachment 252107 [details] [review]:

OK.
Comment 3 Colin Walters 2013-08-25 19:30:44 UTC
Attachment 252107 [details] pushed as b600ae5 - repo: Fix object storage size API to be 64 bit